# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
src/pre_commit_hooks/: sort_pyproject.py
