[tool.poetry]
name = "pre-commit-hooks"
version = "0.3.0"
description = "Random pre-commit hooks that I find useful. Use at your own risk!"
authors = ["Boris Pfahringer <borpfa@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
tomlkit = "^0.11.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[tool.poetry.scripts]
sort-pyproject = "pre_commit_hooks.sort_pyproject:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
